--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+
     </properties>
      <parent>
         <groupId>org.springframework.boot</groupId>
@@ -17,6 +18,19 @@
     </parent>  
     
   <dependencies>  
+  <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>5.2.11.Final</version>
+</dependency>
+
+        
        	 <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
@@ -26,7 +40,23 @@
     		<artifactId>diozero-core</artifactId>
     		<version>0.10</version>
 		</dependency>
-   </dependencies>
+		<dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.20.0</version>
+        </dependency>
+        <dependency>
+    <groupId>com.github.gwenn</groupId>
+    <artifactId>sqlite-dialect</artifactId>
+    <version>master</version>
+</dependency>
+
+
+        <dependency>
+        	<groupId>org.hibernate</groupId>
+        	<artifactId>hibernate-entitymanager</artifactId>
+        </dependency>
+  </dependencies>
   
     <build>
         <plugins>
@@ -44,7 +74,13 @@
             <id>spring-releases</id>
             <url>https://repo.spring.io/libs-release</url>
         </repository>
+    <repository>
+        <id>jitpack.io</id>
+        <url>https://jitpack.io</url>
+    </repository>
     </repositories>
+    
+    
     <pluginRepositories>
         <pluginRepository>
             <id>spring-releases</id>
