--- a/pom.xml
+++ b/pom.xml
@@ -24,13 +24,17 @@
         </dependency>
         
         <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
-<dependency>
-    <groupId>org.hibernate</groupId>
-    <artifactId>hibernate-core</artifactId>
-    <version>5.2.11.Final</version>
-</dependency>
-
-        
+		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-core</artifactId>
+		    <version>5.2.11.Final</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-collections4</artifactId>
+		    <version>4.0</version>
+		</dependency>
        	 <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
@@ -46,16 +50,27 @@
             <version>3.20.0</version>
         </dependency>
         <dependency>
-    <groupId>com.github.gwenn</groupId>
-    <artifactId>sqlite-dialect</artifactId>
-    <version>master</version>
-</dependency>
-
-
+		    <groupId>com.github.gwenn</groupId>
+		    <artifactId>sqlite-dialect</artifactId>
+		    <version>master</version>
+		</dependency>
         <dependency>
         	<groupId>org.hibernate</groupId>
         	<artifactId>hibernate-entitymanager</artifactId>
         </dependency>
+       	<dependency>
+		    <groupId>com.github.sarxos</groupId>
+		    <artifactId>webcam-capture</artifactId>
+		    <version>0.3.11</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.nativelibs4java</groupId>
+		    <artifactId>bridj</artifactId>
+		    <version>0.7.0</version>
+		</dependency>
+		
+        
   </dependencies>
   
     <build>
